[package]
name = "tokio-mpmc"
version = "0.1.0"
edition = "2024"
description = "A multi-producer multi-consumer queue implementation based on Tokio"
license = "Apache-2.0"
authors = ["lispking"]
repository = "https://github.com/lispking/tokio-mpmc"
keywords = ["tokio", "mpmc", "queue", "async", "pool"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
rand = "0.9"
crossbeam-queue = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
